# capstone-2025-26

./: README.md
.github/ISSUE_TEMPLATE/: pull_request_templat
.github/ISSUE_TEMPLETE/: bug_report.md  feature_request.md
.github/workflows/: main.yml
frontend/: .gitignore  pubspec.yaml
frontend/android/app/: build.gradle
frontend/android/app/src/main/: AndroidManifest.xml
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: main.dart  routes.dart
frontend/lib/screens/: home.dart  initialPage.dart  login.dart  restroPage.dart  socialLoginWebView.dart
frontend/lib/themes/: color.dart
frontend/lib/utils/: iconToImage.dart
frontend/lib/widgets/: circleButton.dart  crewBox.dart  customListItem.dart  profileBox.dart  widgetBox.dart
frontend/linux/: CMakeLists.txt
frontend/linux/runner/: my_application.cc
frontend/macos/Flutter/: GeneratedPluginRegistrant.swift
frontend/macos/Runner.xcodeproj/: project.pbxproj
frontend/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
frontend/macos/Runner/Configs/: AppInfo.xcconfig
frontend/test/: widget_test.dart
frontend/web/: index.html  manifest.json
frontend/windows/: CMakeLists.txt
frontend/windows/runner/: Runner.rc  main.cpp
journey/: Dockerfile  docker-compose.yml  pyproject.toml
journey/ai_manager/: permissions.py  serializers.py  urls.py  views.py
journey/community/: models.py  permissions.py  serializers.py  urls.py  views.py
journey/community/migrations/: 0001_initial.py
journey/config/: otel.py  settings.py  urls.py  wsgi.py
journey/crew/: models.py  permissions.py  serializers.py  urls.py  views.py
journey/crew/migrations/: 0001_initial.py
journey/kakao_manager/: apps.py  urls.py  views.py
journey/naver_manager/: apps.py  urls.py  views.py
journey/retrospect/: apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
journey/retrospect/migrations/: 0001_initial.py
journey/token_manager/: serializer.py  urls.py  views.py
journey/user_manager/: models.py  serializer.py  serializers.py  urls.py  utils.py  views.py
journey/user_manager/migrations/: 0001_initial.py  0002_user_profile_image_notification.py
reme/: README.md  pubspec.yaml
reme/lib/: main.dart  routes.dart
reme/lib/screens/: initialPage.dart
reme/lib/widgets/: customListItem.dart
reme/linux/: CMakeLists.txt
reme/macos/Runner.xcodeproj/: project.pbxproj
reme/macos/Runner/Configs/: AppInfo.xcconfig
reme/windows/runner/: Runner.rc
(+5 files in other folders)
