[project]
name = "journey"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.1.7,<6.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "djangorestframework-simplejwt (>=5.5.0,<6.0.0)",
    "drf-yasg (>=1.21.10,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "opentelemetry-api (>=1.31.1,<2.0.0)",
    "opentelemetry-sdk (>=1.31.1,<2.0.0)",
    "opentelemetry-instrumentation-django (>=0.52b1,<0.53)",
    "opentelemetry-exporter-otlp (>=1.31.1,<2.0.0)",
    "opentelemetry-instrumentation-logging (>=0.52b1,<0.53)"
]

[tool.poetry]
packages = [{include = "journey", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
